--- a/index.html
+++ b/index.html
@@ -1,39 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Chromecraft Furnishers</title>
+  <title>Chromecraft Furnishers | Office Furniture Solutions</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Chromecraft Furnishers offers premium office furniture and workspace solutions including workstations, chairs, tables, and custom interiors.">
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background: #f4f4f4;
       margin: 0;
+      font-family: Arial, Helvetica, sans-serif;
+      background: #f2f2f2;
+      color: #222;
+    }
+    .wrapper {
+      min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      height: 100vh;
+      padding: 20px;
     }
     .card {
       background: #ffffff;
-      padding: 40px;
+      max-width: 560px;
+      width: 100%;
+      padding: 45px 40px;
       text-align: center;
-      max-width: 420px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.1);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.1);
     }
     h1 {
-      margin-bottom: 10px;
+      margin: 0 0 8px;
+      font-size: 28px;
+      letter-spacing: 0.4px;
     }
-    p {
+    .tagline {
+      font-size: 15px;
       color: #555;
+      margin-bottom: 25px;
+    }
+    .divider {
+      height: 1px;
+      background: #ddd;
+      margin: 25px 0;
+    }
+    .services {
+      font-size: 14px;
+      color: #444;
+      line-height: 1.7;
+      margin-bottom: 25px;
+    }
+    .contact {
+      font-size: 14px;
+      color: #333;
+      line-height: 1.6;
+    }
+    .contact strong {
+      display: block;
+      margin-bottom: 5px;
+    }
+    .cta {
+      margin-top: 30px;
+    }
+    .cta a {
+      display: inline-block;
+      text-decoration: none;
+      color: #fff;
+      background: #111;
+      padding: 12px 26px;
+      margin: 6px;
+      font-size: 14px;
+    }
+    .cta a.secondary {
+      background: #444;
+    }
+    .footer {
+      margin-top: 28px;
+      font-size: 12px;
+      color: #777;
     }
   </style>
 </head>
 <body>
-  <div class="card">
-    <h1>Chromecraft Furnishers</h1>
-    <p>Our website is coming soon.</p>
-    <p>For enquiries, please contact us.</p>
+
+  <div class="wrapper">
+    <div class="card">
+      <h1>Chromecraft Furnishers</h1>
+      <div class="tagline">
+        Office Furniture & Workspace Solutions
+      </div>
+
+      <div class="divider"></div>
+
+      <div class="services">
+        Workstations · Office Chairs · Tables · Storage Units<br>
+        Conference Rooms · Custom Office Interiors
+      </div>
+
+      <div class="contact">
+        <strong>Address</strong>
+        Khewat No. 520, Plot No. 11/2/2, Village Ullawas,<br>
+        Old Badshahpur Road, Near AIPL Business Club,<br>
+        Sector 62, Gurgaon, Haryana – 122101<br><br>
+
+        <strong>Email</strong>
+        info@chromecraft.com<br>
+
+        <strong>Website</strong>
+        www.chromecraft.com
+      </div>
+
+      <div class="cta">
+        <a href="https://wa.me/919818330844" target="_blank">WhatsApp Us</a>
+        <a href="tel:+919818330844" class="secondary">Call Now</a>
+      </div>
+
+      <div class="footer">
+        Website under development. Full catalogue coming soon.
+      </div>
+    </div>
   </div>
+
 </body>
 </html>
