--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Chromecraft Furnishers | Office Furniture Solutions</title>
+ <head>
+  <title>Chromecraft Furnishers | Office Furniture Manufacturer in Gurgaon</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Chromecraft Furnishers offers premium office furniture and workspace solutions including workstations, chairs, tables, and custom interiors.">
+  <meta name="description" content="Chromecraft Furnishers provides office furniture and workspace solutions including workstations, chairs, tables, and custom interiors in Gurgaon.">
+
   <style>
     body {
       margin: 0;
@@ -20,73 +22,37 @@
       padding: 20px;
     }
     .card {
-      background: #ffffff;
-      max-width: 560px;
+      background: linear-gradient(180deg, #ffffff, #fafafa);
+      max-width: 580px;
       width: 100%;
-      padding: 45px 40px;
+      padding: 50px 45px;
       text-align: center;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.1);
+      border-radius: 6px;
+      box-shadow: 0 18px 50px rgba(0,0,0,0.12);
     }
-    h1 {
-      margin: 0 0 8px;
-      font-size: 28px;
-      letter-spacing: 0.4px;
-    }
-    .tagline {
-      font-size: 15px;
-      color: #555;
-      margin-bottom: 25px;
-    }
-    .divider {
-      height: 1px;
-      background: #ddd;
-      margin: 25px 0;
-    }
-    .services {
-      font-size: 14px;
-      color: #444;
-      line-height: 1.7;
-      margin-bottom: 25px;
-    }
-    .contact {
-      font-size: 14px;
-      color: #333;
-      line-height: 1.6;
-    }
-    .contact strong {
-      display: block;
-      margin-bottom: 5px;
-    }
-    .cta {
-      margin-top: 30px;
-    }
-    .cta a {
-      display: inline-block;
-      text-decoration: none;
-      color: #fff;
-      background: #111;
-      padding: 12px 26px;
-      margin: 6px;
-      font-size: 14px;
-    }
-    .cta a.secondary {
-      background: #444;
-    }
-    .footer {
-      margin-top: 28px;
-      font-size: 12px;
-      color: #777;
+    .logo {
+      max-width: 160px;
+      margin-bottom: 18px;
     }
   </style>
 </head>
+
 <body>
 
   <div class="wrapper">
     <div class="card">
+
+      <!-- LOGO ADDED HERE -->
+      <img src="logo.png" alt="Chromecraft Furnishers" class="logo">
+
       <h1>Chromecraft Furnishers</h1>
-      <div class="tagline">
-        Office Furniture & Workspace Solutions
-      </div>
+      <p>Office Furniture & Workspace Solutions</p>
+
+    </div>
+  </div>
+
+</body>
+</html>
 
       <div class="divider"></div>
 
