--- a/index.html
+++ b/index.html
@@ -41,10 +41,8 @@
 
   <div class="wrapper">
     <div class="card">
-
       
-      <img src="logo.png" alt="Chromecraft Furnishers" class="logo">
-
+      <img src="logo.png" alt="Chromecraft Furnishers" class="logo"
       <h1>Chromecraft Furnishers</h1>
       <p>Office Furniture & Workspace Solutions</p>
 
