--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Chromecraft Furnishers | Office Furniture Solutions</title>
+  <title>Chromecraft Furnishers | Office Furniture Manufacturer in Gurgaon</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Chromecraft Furnishers offers premium office furniture and workspace solutions including workstations, chairs, tables, and custom interiors.">
+  <meta name="description" content="Chromecraft Furnishers provides office furniture and workspace solutions including workstations, chairs, tables, and custom interiors in Gurgaon.">
+
   <style>
     body {
       margin: 0;
@@ -12,54 +13,80 @@
       background: #f2f2f2;
       color: #222;
     }
+
     .wrapper {
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 20px;
+      padding: 30px 15px;
     }
+
     .card {
-      background: #ffffff;
-      max-width: 560px;
+      background: linear-gradient(180deg, #ffffff, #fafafa);
+      max-width: 640px;
       width: 100%;
-      padding: 45px 40px;
+      padding: 50px 45px;
       text-align: center;
-      box-shadow: 0 12px 40px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      box-shadow: 0 18px 50px rgba(0,0,0,0.12);
     }
+
+    .logo {
+      max-width: 140px;
+      margin-bottom: 20px;
+    }
+
     h1 {
-      margin: 0 0 8px;
+      margin: 10px 0 6px;
       font-size: 28px;
-      letter-spacing: 0.4px;
     }
+
     .tagline {
       font-size: 15px;
       color: #555;
       margin-bottom: 25px;
     }
+
     .divider {
       height: 1px;
       background: #ddd;
       margin: 25px 0;
     }
+
     .services {
       font-size: 14px;
       color: #444;
       line-height: 1.7;
       margin-bottom: 25px;
     }
+
     .contact {
       font-size: 14px;
       color: #333;
       line-height: 1.6;
+      margin-bottom: 20px;
     }
+
     .contact strong {
       display: block;
-      margin-bottom: 5px;
+      margin-top: 12px;
+      font-weight: bold;
     }
+
+    .contact a {
+      color: #111;
+      text-decoration: none;
+    }
+
+    .contact a:hover {
+      text-decoration: underline;
+    }
+
     .cta {
-      margin-top: 30px;
+      margin: 25px 0;
     }
+
     .cta a {
       display: inline-block;
       text-decoration: none;
@@ -68,57 +95,76 @@
       padding: 12px 26px;
       margin: 6px;
       font-size: 14px;
+      border-radius: 4px;
     }
+
     .cta a.secondary {
       background: #444;
     }
+
+    .cta a.map {
+      background: #1a73e8;
+    }
+
     .footer {
-      margin-top: 28px;
       font-size: 12px;
       color: #777;
+      margin-top: 20px;
     }
   </style>
 </head>
+
 <body>
 
   <div class="wrapper">
     <div class="card">
+
+      <!-- Logo -->
+      <img src="logo.png" alt="Chromecraft Furnishers" class="logo">
+
+      <!-- Heading -->
       <h1>Chromecraft Furnishers</h1>
-      <div class="tagline">
-        Office Furniture & Workspace Solutions
-      </div>
+      <div class="tagline">Office Furniture & Workspace Solutions</div>
 
       <div class="divider"></div>
 
+      <!-- Services -->
       <div class="services">
         Workstations · Office Chairs · Tables · Storage Units<br>
         Conference Rooms · Custom Office Interiors
       </div>
 
+      <!-- Contact -->
       <div class="contact">
         <strong>Address</strong>
-        Khewat No. 520, Plot No. 11/2/2, Village Ullawas,<br>
-        Old Badshahpur Road, Near AIPL Business Club,<br>
-        Sector 62, Gurgaon, Haryana – 122101<br><br>
+        <a href="https://www.google.com/maps/search/?api=1&query=Chromecraft+Furnishers+Sector+62+Gurgaon" target="_blank">
+          Khewat No. 520, Plot No. 11/2/2, Village Ullawas,<br>
+          Old Badshahpur Road, Near AIPL Business Club,<br>
+          Sector 62, Gurgaon, Haryana – 122101
+        </a>
 
         <strong>Email</strong>
-        info@chromecraft.com<br>
+        <a href="mailto:info@chromecraft.com">info@chromecraft.com</a>
 
         <strong>Website</strong>
-        www.chromecraft.com
+        <a href="https://www.chromecraft.com" target="_blank">www.chromecraft.com</a>
       </div>
 
+      <!-- CTA -->
       <div class="cta">
         <a href="https://wa.me/919818330844" target="_blank">WhatsApp Us</a>
         <a href="tel:+919818330844" class="secondary">Call Now</a>
+        <a href="https://www.google.com/maps/dir/?api=1&destination=Chromecraft+Furnishers+Sector+62+Gurgaon" target="_blank" class="map">
+          Get Directions
+        </a>
       </div>
 
       <div class="footer">
         Website under development. Full catalogue coming soon.
       </div>
+
     </div>
   </div>
 
 </body>
 </html>
-
