--- a/index.html
+++ b/index.html
@@ -179,5 +179,24 @@
         <a href="mailto:info@chromecraft.com">info@chromecraft.com</a>
 
         <strong>Website</strong>
-        <a href="https://www.chro
+        <a href="https://www.chromecraft.com" target="_blank">www.chromecraft.com</a>
+      </div>
+
+      <div class="cta">
+        <a href="https://wa.me/919818330844" target="_blank">WhatsApp Us</a>
+        <a href="tel:+919818330844" class="secondary">Call Now</a>
+        <a href="https://www.google.com/maps/dir/?api=1&destination=Chromecraft+Furnishers+Sector+62+Gurgaon" target="_blank" class="map">
+          Get Directions
+        </a>
+      </div>
+
+      <div class="footer">
+        Website under development. Full catalogue coming soon.
+      </div>
+
+    </div>
+  </div>
+
+</body>
+</html>
 
